# llm-test

./: .gitignore  Dockerfile.chainlit  README.md  chainlit_app.py  pyproject.toml  requirements.txt
app/: configs.py  metadata.py  resumer_metadata.py  server.py  utils.py
public/: custom.css
