[tool.poetry]
name = "juno-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <bamba@juno.tech>"]
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = ">=0.25.0,<0.26.0"
langserve = {extras = ["server"], version = ">=0.0.30"}
langchain = "^0.3.9"
httpx = "0.23.0"
langchain-openai = "^0.2.11"
langchain-community = "^0.3.9"
sqlalchemy = "^2.0.36"
langchain-experimental = "^0.3.3"
chainlit = "^1.3.2"
pydantic = "2.10.1"
scikit-learn = "^1.6.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
